crates/vexor-compiler/tests/golden/error/output/lambda_missing_body.err
Error: parse error
   ╭─[ input:2:18 ]
   │
 2 │ val double = x ->
   │                  ┬  
   │                  ╰── invalid lambda body
   │                  │  
   │                  ╰── expected return expression
───╯
